# serial.hpp

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  serial.cpp  serial.hpp
examples/: CMakeLists.txt  example.cpp  virtual_serial_ports.sh
include/: serial.h
src/: serial.c  serial.cpp
